--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero">
-    <div class="hero-container col-lg-12">
+    <div class="hero-container">
       <h1>Marching Band Gita Swara Mitra</h1>
       <h2>Marching Band From Mitra Industry Vocational High School</h2>
       <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
@@ -87,7 +87,7 @@
           <div class="row">
 
             <div class="image col-lg-4 d-flex align-items-stretch justify-content-center justify-content-lg-start">
-              <img src="./assets/img/logo-mb.png" alt="">
+              <img src="./assets/img/logo-mb.jpg" class="img-fluid" alt="">
             </div>
 
             <div class="col-lg-8 d-flex flex-column align-items-stretch">
