--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     <section id="formulir" class="formulir">
       <div class="container">
         <div class="bordering">
-          <form class="form" action="script.php" method="post" autocomplete="off">
+          <form class="form" action="send.php" method="post" autocomplete="off">
 
             <div class="section-title">
               <h3 class="title-form">Register Form</h3>
@@ -235,11 +235,11 @@
 
             <label for="choose">
               <ul>
-                <input type="radio" id="yes" class="pilih1" name="radio">
+                <input type="radio" id="pernah" class="pilih1" name="radio">
                 <span>Pernah</span>
               </ul>
               <ul>
-                <input type="radio" id="no" class="pilih2" name="radio">
+                <input type="radio" id="belum" class="pilih2" name="radio">
                 <span>Belum</span>
               </ul>
             </label>
@@ -303,7 +303,7 @@
     </div>
   </footer><!-- End Footer -->
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+  <a href="#hero" class="back-to-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
