--- a/message.html
+++ b/message.html
@@ -25,7 +25,7 @@
             icon: "success"
         }).then((result) => {
             if (result.isConfirmed) {
-                window.location.href = "regist.php";
+                window.location.href = "index.html";
             }
         });
 
