--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
         <li><a class="nav-link scrollto" href="a_corps/corps.html">A Corp's</a></li>
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
-    </nav><!-- navbar -->
+    </nav>
+    <!-- navbar -->
 
   </header><!-- End Header -->
 
