--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     <section id="formulir" class="formulir">
       <div class="container">
         <div class="bordering">
-          <form name="contact" data-netlify="true" class="form" action="send.php" method="post" autocomplete="off">
+          <form name="Data Anggota Baru" data-netlify="true" class="form" action="send.php" method="post" autocomplete="off">
 
             <div class="section-title">
               <h3 class="title-form">Register Form</h3>
