--- a/index.html
+++ b/index.html
@@ -236,11 +236,11 @@
 
             <label for="choose">
               <ul>
-                <input type="radio" id="pernah" class="pilih1" name="radio">
+                <input type="radio" id="pernah" class="pilih1" name="pernah">
                 <span>Pernah</span>
               </ul>
               <ul>
-                <input type="radio" id="belum" class="pilih2" name="radio">
+                <input type="radio" id="belum" class="pilih2" name="belum">
                 <span>Belum</span>
               </ul>
             </label>
