--- a/index.html
+++ b/index.html
@@ -197,65 +197,65 @@
     </section>
 
     <!-- Form Register -->
-    <section id="formulir" class="formulir">
-      <div class="container">
-        <div class="bordering">
-          <form name="Data Anggota Baru" data-netlify="true" class="form" action="send.php" method="post" autocomplete="off">
+<section id="formulir" class="formulir">
+  <div class="container">
+    <div class="bordering">
+      <form name="Data Anggota Baru" data-netlify="true" class="form" action="send.php" method="post" autocomplete="off">
 
-            <div class="section-title">
-              <h3 class="title-form">Register Form</h3>
-              <hr class="garis1">
-              <img class="img-1" src="assets/img/logo-mbgsm.png">
-              <img class="img-2" src="assets/img/logo-mitra.png">
-            </div>
-
-            <p class="message">Isi data dirimu untuk menjadi anggota <span>MBGSM</span> </p>
-            <label>
-              <input id="name" name="name" required="" placeholder="" type="text" class="input">
-              <span>Nama.</span>
-            </label>
-
-            <label>
-              <input id="kelas" name="kelas" required="" placeholder="" type="text" class="input">
-              <span>Kelas.</span>
-            </label>
-
-            <label>
-              <input id="number" name="number" required="" placeholder="" type="text" class="input">
-              <span>Telp.</span>
-            </label>
-
-            <label>
-              <input id="reason" name="reason" required="" placeholder="" type="text" class="input">
-              <span>Alasan Bergabung MBGSM</span>
-            </label>
-
-            <label for="ask">
-              <h4>Apakah pernah mengikuti kegiatan Marching Band?</h4>
-            </label>
-
-            <label for="choose">
-              <ul>
-                <input type="radio" id="pernah" class="pilih1" name="pernah">
-                <span>Pernah</span>
-              </ul>
-              <ul>
-                <input type="radio" id="belum" class="pilih2" name="belum">
-                <span>Belum</span>
-              </ul>
-            </label>
-
-            <label for="input-alat" id="input-alat" class="input-alat">
-              <h5>Isi dengan alat yang pernah dimainkan. (Jika belum pernah isi dengan tanda '-' )</h5>
-              <input type="text" id="alat" class="alat" placeholder="Cth. Saat SMP pernah bermain Baritone">
-            </label>
-
-            <button class="submit">Submit</button>
-          </form>
+        <div class="section-title">
+          <h3 class="title-form">Register Form</h3>
+          <hr class="garis1">
+          <img class="img-1" src="assets/img/logo-mbgsm.png">
+          <img class="img-2" src="assets/img/logo-mitra.png">
         </div>
-      </div>
-    </section>
-    <!-- End Form Register -->
+
+        <p class="message">Isi data dirimu untuk menjadi anggota <span>MBGSM</span> </p>
+        <label>
+          <input id="name" name="name" required="" placeholder="" type="text" class="input">
+          <span>Nama.</span>
+        </label>
+
+        <label>
+          <input id="kelas" name="kelas" required="" placeholder="" type="text" class="input">
+          <span>Kelas.</span>
+        </label>
+
+        <label>
+          <input id="number" name="number" required="" placeholder="" type="text" class="input">
+          <span>Telp.</span>
+        </label>
+
+        <label>
+          <input id="reason" name="reason" required="" placeholder="" type="text" class="input">
+          <span>Alasan Bergabung MBGSM</span>
+        </label>
+
+        <label for="ask">
+          <h4>Apakah pernah mengikuti kegiatan Marching Band?</h4>
+        </label>
+
+        <label for="choose">
+          <ul>
+            <input type="radio" id="pernah" class="pilih1" name="pilih" value="pernah">
+            <span>Pernah</span>
+          </ul>
+          <ul>
+            <input type="radio" id="belum" class="pilih2" name="pilih" value="belum">
+            <span>Belum</span>
+          </ul>
+        </label>
+
+        <label for="input-alat" id="input-alat" class="input-alat">
+          <h5>Isi dengan alat yang pernah dimainkan. (Jika belum pernah isi dengan tanda '-' )</h5>
+          <input type="text" id="alat" class="alat" placeholder="Cth. Saat SMP pernah bermain Baritone">
+        </label>
+
+        <button class="submit">Submit</button>
+      </form>
+    </div>
+  </div>
+</section>
+<!-- End Form Register -->
 
     <!-- ======= Contact Me Section ======= -->
     <section id="contact" class="contact">
