--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
       </div>
     </section>
 
-    <!-- Form Register -->
+ <!-- Form Register -->
 <section id="formulir" class="formulir">
   <div class="container">
     <div class="bordering">
@@ -236,18 +236,18 @@
 
         <label for="choose">
           <ul>
-            <input type="radio" id="pernah" class="pilih1" name="pilih" value="pernah">
+            <input type="radio" id="pernah" class="radio" name="pilih_yes" value="Pernah">
             <span>Pernah</span>
           </ul>
           <ul>
-            <input type="radio" id="belum" class="pilih2" name="pilih" value="belum">
+            <input type="radio" id="belum" class="radio" name="pilih_no" value="Belum">
             <span>Belum</span>
           </ul>
         </label>
 
         <label for="input-alat" id="input-alat" class="input-alat">
           <h5>Isi dengan alat yang pernah dimainkan. (Jika belum pernah isi dengan tanda '-' )</h5>
-          <input type="text" id="alat" class="alat" placeholder="Cth. Saat SMP pernah bermain Baritone">
+          <input type="text" id="alat" class="alat" name="alat" placeholder="Cth. Saat SMP pernah bermain Baritone">
         </label>
 
         <button class="submit">Submit</button>
