--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
       </div>
     </section>
 
- <!-- Form Register -->
+  <!-- Form Register -->
 <section id="formulir" class="formulir">
   <div class="container">
     <div class="bordering">
@@ -236,11 +236,11 @@
 
         <label for="choose">
           <ul>
-            <input type="radio" id="pernah" class="radio" name="pilih_yes" value="Pernah">
+            <input type="radio" id="pernah" class="radio" name="pilih" value="Pernah">
             <span>Pernah</span>
           </ul>
           <ul>
-            <input type="radio" id="belum" class="radio" name="pilih_no" value="Belum">
+            <input type="radio" id="belum" class="radio" name="pilih" value="Belum">
             <span>Belum</span>
           </ul>
         </label>
