--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <div class="section-title">
           <h3 class="title-form">Register Form</h3>
           <hr class="garis1">
-          <img class="img-1" src="assets/img/logo-mbgsm.png">
+          <img class="img-1" src="assets/img/logo-mb.jpg" style="width: 45px; height: auto; margin-top: 5px;">
           <img class="img-2" src="assets/img/logo-mitra.png">
         </div>
 
