--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     </section>
 
   <!-- Form Register -->
-<section id="formulir" class="formulir">
+<!-- <section id="formulir" class="formulir">
   <div class="container">
     <div class="bordering">
       <form name="Data Anggota Baru" data-netlify="true" class="form" action="send.php" method="post" autocomplete="off">
@@ -254,7 +254,7 @@
       </form>
     </div>
   </div>
-</section>
+</section> -->
 <!-- End Form Register -->
 
     <!-- ======= Contact Me Section ======= -->
