--- a/index.html
+++ b/index.html
@@ -197,10 +197,10 @@
     </section>
 
   <!-- Form Register -->
-<!-- <section id="formulir" class="formulir">
+<section id="formulir" class="formulir">
   <div class="container">
     <div class="bordering">
-      <form name="Data Anggota Baru" data-netlify="true" class="form" action="send.php" method="post" autocomplete="off">
+      <form name="Data Anggota Baru" data-netlify="true" class="form" action="https://script.google.com/macros/s/AKfycbyIX7qRJ-pIol3MmqRVqFk5jJcnTiE3IfWV-88QXsVW_v3HVK6qgyT6XCS1VegHzaTVzQ/exec" method="post" autocomplete="off">
 
         <div class="section-title">
           <h3 class="title-form">Register Form</h3>
@@ -254,7 +254,7 @@
       </form>
     </div>
   </div>
-</section> -->
+</section>
 <!-- End Form Register -->
 
     <!-- ======= Contact Me Section ======= -->
