--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         </label>
 
         <label>
-          <input id="number" name="number" required="" placeholder="" type="text" class="input">
+          <input id="number" name="number" required="" placeholder="" type="tel" class="input">
           <span>Telp.</span>
         </label>
 
@@ -250,7 +250,7 @@
           <input type="text" id="alat" class="alat" name="alat" placeholder="Cth. Saat SMP pernah bermain Baritone">
         </label>
 
-        <button class="submit">Submit</button>
+        <button class="submit" type="submit">Submit</button>
       </form>
     </div>
   </div>
