--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 <section id="formulir" class="formulir">
   <div class="container">
     <div class="bordering">
-      <form name='dataNewMember' data-netlify="true" class="form" method="post" autocomplete="off">
+      <form name='submit-to-google-sheet' data-netlify="true" class="form" method="post" autocomplete="off">
 
         <div class="section-title">
           <h3 class="title-form">Register Form</h3>
@@ -322,7 +322,7 @@
 
   <script>
   const scriptURL = 'https://script.google.com/macros/s/AKfycbyIX7qRJ-pIol3MmqRVqFk5jJcnTiE3IfWV-88QXsVW_v3HVK6qgyT6XCS1VegHzaTVzQ/exec'
-  const form = document.forms['dataNewMember']
+  const form = document.forms['submit-to-google-sheet']
 
   form.addEventListener('submit', e => {
     e.preventDefault()
