--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
+  <meta property="og:title" content="Marching Band Gita Swara Mitra">
+  <meta property="og:description" content="Sebuah ekstrakurikuler di SMK Mitra Industri MM2100 yang mengembangkan bakat siswa di dunia musik Marching Band.">
+  <meta property="og:image" content="assets/img/logo-mbgsm.png">
+  <meta property="og:type" content="website">
+
   <title>Marching Band Gita Swara Mitra</title>
   <meta content="" name="description">
 
@@ -200,7 +205,7 @@
 <section id="formulir" class="formulir">
   <div class="container">
     <div class="bordering">
-      <form name='submit-to-google-sheet' data-netlify="true" class="form" method="post" autocomplete="off">
+      <form name='data-new-member' data-netlify="true" class="form" method="post" autocomplete="off">
 
         <div class="section-title">
           <h3 class="title-form">Register Form</h3>
@@ -322,7 +327,7 @@
 
   <script>
   const scriptURL = 'https://script.google.com/macros/s/AKfycbyIX7qRJ-pIol3MmqRVqFk5jJcnTiE3IfWV-88QXsVW_v3HVK6qgyT6XCS1VegHzaTVzQ/exec'
-  const form = document.forms['submit-to-google-sheet']
+  const form = document.forms['data-new-member']
 
   form.addEventListener('submit', e => {
     e.preventDefault()
