--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 
       try {
         // Kirim data dengan fetch (simulasi pengiriman data ke server)
-        const response = await fetch("https://example.com/api/submit", { // Ganti URL dengan endpoint server Anda
+        const response = await fetch("https://script.google.com/macros/s/AKfycbyIX7qRJ-pIol3MmqRVqFk5jJcnTiE3IfWV-88QXsVW_v3HVK6qgyT6XCS1VegHzaTVzQ/exec", { // Ganti URL dengan endpoint server Anda
           method: "POST",
           headers: {
             "Content-Type": "application/json",
