--- a/index.html
+++ b/index.html
@@ -341,6 +341,7 @@
         // Kirim data dengan fetch (simulasi pengiriman data ke server)
         const response = await fetch("https://script.google.com/macros/s/AKfycbyIX7qRJ-pIol3MmqRVqFk5jJcnTiE3IfWV-88QXsVW_v3HVK6qgyT6XCS1VegHzaTVzQ/exec", { // Ganti URL dengan endpoint server Anda
           method: "POST",
+          mode: 'no-cors', // Mode no-cors
           headers: {
             "Content-Type": "application/json",
           },
