--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     </section>
 
   <!-- Form Register -->
-<section id="formulir" class="formulir">
+<!-- <section id="formulir" class="formulir">
   <div class="container">
     <div class="bordering">
       <form name='data-new-member' data-netlify="true" class="form" method="post" autocomplete="off">
@@ -259,7 +259,7 @@
       </form>
     </div>
   </div>
-</section>
+</section> -->
 <!-- End Form Register -->
 
     <!-- ======= Contact Me Section ======= -->
@@ -326,7 +326,7 @@
   <script src="https://kit.fontawesome.com/8e52fd1cc1.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-<script>
+<!-- <script>
   document.addEventListener("DOMContentLoaded", () => {
     const form = document.querySelector("form[name='data-new-member']");
     
@@ -379,7 +379,7 @@
       }
     });
   });
-</script>
+</script> -->
 
 </body>
 
